# ImporSan-scouting

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  vercel.json  wsgi.py
backend/: .env.example  pyproject.toml  run.py  vercel_entry.py  wsgi.py
backend/app/: __init__.py  config.py
backend/app/api/: prospect_analysis_routes.py
backend/app/services/: helium10_xlsx_parser.py  market_analysis_engine.py
backend/app/utils/: app_logger.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: prospect_analysis_api.js  prospect_api_client.js
frontend/src/components/: Dashboard.jsx  DropZone.jsx
