[project]
name = "imporsan-prospect-vercel"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
# Vercel Flask: points to the Flask instance (https://vercel.com/docs/frameworks/backend/flask)
app = "wsgi:app"
